# jax-sanbox

./: README.md  pyproject.toml
projects/mnist/: config.py  dataloader.py  metrics.py  model.py  train.py
projects/mnist-flax/: config.py  dataloader.py  main.py  model.py  train.py
