[tool.poetry]
name = "jax-sanbox"
version = "0.1.0"
description = ""
authors = ["MalarzDawid <github@dawidmalarz.pl>"]
readme = "README.md"
packages = [{include = "jax_sanbox"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.8"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
jaxlib = "^0.4.7"
torchvision = "^0.15.1"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
